--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,15 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -13,9 +22,22 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
       error_page   500 502 503 504  /50x.html;
+      
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
+      location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+      location /api {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
 
 }
